# jork

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
source/: CMakeLists.txt  assets.ixx  console.cpp  console.ixx  constants.ixx  fuzzer_entry.cpp  main.cpp  parser.cpp  parser.ixx  strings.cpp  strings.ixx  texture.cpp  texture.ixx  world.ixx
tools/: add_string.py
